--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Elegant Todo</title>
-    <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <link rel="manifest" href="manifest.json">
 </head>
 
 <body class="bg-light">
@@ -19,16 +20,16 @@
 
         <div class="card shadow-sm">
             <div class="card-body">
-                <h2 class="h4 mb-4">My Todo List</h2>
+                <h2 class="h4 mb-4">Your Todo List</h2>
 
-                <!-- Theme Selector -->
+                <!-- Theme Selector 
                 <div class="d-flex align-items-center mb-3">
                     <span class="me-2">Theme:</span>
                     <button class="theme-btn blue btn btn-sm rounded-circle me-2" data-theme="blue"></button>
                     <button class="theme-btn purple btn btn-sm rounded-circle me-2" data-theme="purple"></button>
                     <button class="theme-btn green btn btn-sm rounded-circle me-2" data-theme="green"></button>
                     <button class="theme-btn dark btn btn-sm rounded-circle" data-theme="dark"></button>
-                </div>
+                </div>-->
 
                 <!-- Input Area -->
                 <div class="input-group mb-3">
