--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Elegant Todo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+    <link
     <link rel="stylesheet" href="style.css">
     <link rel="manifest" href="manifest.json">
 </head>
