--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Elegant Todo</title>
+    <title>Taska</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
-    <link
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <link rel="manifest" href="manifest.json">
 </head>
@@ -15,43 +15,45 @@
 <body class="bg-light">
     <div class="container mt-5">
         <header class="text-center mb-4">
-            <h1 class="display-4">Taska</h1>
-            <p class="lead">Organize your day</p>
+            <h1 class="display-4 fw-bold text-primary">Taska</h1>
+            <p class="lead text-muted">Organize your day efficiently</p>
         </header>
 
-        <div class="card shadow-sm">
-            <div class="card-body">
-                <h2 class="h4 mb-4">Your Todo List</h2>
-
-                <!-- Theme Selector 
-                <div class="d-flex align-items-center mb-3">
-                    <span class="me-2">Theme:</span>
-                    <button class="theme-btn blue btn btn-sm rounded-circle me-2" data-theme="blue"></button>
-                    <button class="theme-btn purple btn btn-sm rounded-circle me-2" data-theme="purple"></button>
-                    <button class="theme-btn green btn btn-sm rounded-circle me-2" data-theme="green"></button>
-                    <button class="theme-btn dark btn btn-sm rounded-circle" data-theme="dark"></button>
-                </div>-->
+        <div class="card shadow-lg">
+            <div class="card-body p-4">
+                <h2 class="h4 mb-4 fw-semibold">Your Todo List</h2>
 
                 <!-- Input Area -->
-                <div class="input-group mb-3">
-                    <input type="text" id="new-todo" class="form-control" placeholder="Add new task...">
-                    <button id="add-btn" class="btn btn-primary">+ Add</button>
+                <div class="input-group mb-4">
+                    <input type="text" id="new-todo" class="form-control form-control-lg" placeholder="What needs to be done?">
+                    <select id="todo-category" class="form-select form-select-lg" style="max-width: 120px;">
+                        <option value="work">Work</option>
+                        <option value="personal">Personal</option>
+                        <option value="shopping">Shopping</option>
+                        <option value="other">Other</option>
+                    </select>
+                    <input type="text" id="due-date" class="form-control form-control-lg datepicker" placeholder="Due date">
+                    <button id="add-btn" class="btn btn-primary btn-lg px-4">
+                        <i class="bi bi-plus-lg"></i> Add
+                    </button>
                 </div>
 
                 <!-- Filters -->
-                <div class="d-flex justify-content-center mb-3">
-                    <button class="filter btn btn-outline-secondary me-2 active" data-filter="all">All</button>
-                    <button class="filter btn btn-outline-secondary me-2" data-filter="active">Active</button>      
-                    <button class="filter btn btn-outline-secondary" data-filter="completed">Completed</button>
+                <div class="d-flex justify-content-center mb-4">
+                    <div class="btn-group shadow-sm">
+                        <button class="filter btn btn-outline-primary active" data-filter="all">All</button>
+                        <button class="filter btn btn-outline-primary" data-filter="active">Active</button>      
+                        <button class="filter btn btn-outline-primary" data-filter="completed">Completed</button>
+                    </div>
                 </div>
 
                 <!-- Todo List -->
-                <ul id="todo-list" class="list-group mb-3"></ul>
+                <ul id="todo-list" class="list-group list-group-flush mb-4"></ul>
 
                 <!-- Footer -->
-                <div class="d-flex justify-content-between">
-                    <span id="item-count">0 items</span>
-                    <button id="clear-completed" class="btn btn-link text-decoration-none">Clear Completed</button>
+                <div class="d-flex justify-content-between align-items-center">
+                    <span id="item-count" class="text-muted small">0 items</span>
+                    <button id="clear-completed" class="btn btn-sm btn-outline-danger">Clear Completed</button>
                 </div>
             </div>
         </div>
@@ -59,6 +61,7 @@
 
     <!-- Bootstrap JS Bundle -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
     <script src="script.js" type="module"></script>
 </body>
 
