--- a/index.html
+++ b/index.html
@@ -17,11 +17,12 @@
         <header class="text-center mb-4">
             <h1 class="display-4 fw-bold text-primary">Taska</h1>
             <p class="lead text-muted">Organize your day efficiently</p>
+            <div id="clock" class="position-absolute top-0 end-0 mt-3 me-3"></div>
         </header>
 
         <div class="card shadow-lg">
             <div class="card-body p-4">
-                <h2 class="h4 mb-4 fw-semibold">Your Todo List</h2>
+                <h2 class="h4 mb-4 fw-semibold"></h2>
 
                 <!-- Input Area -->
                 <div class="input-group mb-4">
@@ -33,36 +34,40 @@
                         <option value="other">Other</option>
                     </select>
                     <input type="text" id="due-date" class="form-control form-control-lg datepicker" placeholder="Due date">
-                    <button id="add-btn" class="btn btn-primary btn-lg px-4">
+                    <button id="add-btn" class="btn btn-primary btn-lg px-4" aria-label="Add new task">
                         <i class="bi bi-plus-lg"></i> Add
                     </button>
                 </div>
 
                 <!-- Filters -->
                 <div class="d-flex justify-content-center mb-4">
-                    <div class="btn-group shadow-sm">
-                        <button class="filter btn btn-outline-primary active" data-filter="all">All</button>
-                        <button class="filter btn btn-outline-primary" data-filter="active">Active</button>      
-                        <button class="filter btn btn-outline-primary" data-filter="completed">Completed</button>
-                    </div>
+                    <button class="filter btn btn-outline-primary active" 
+                            data-filter="all" 
+                            aria-label="Show all tasks"
+                            aria-pressed="true">All</button>
+                    <button class="filter btn btn-outline-primary" 
+                            data-filter="active" 
+                            aria-label="Show active tasks"
+                            aria-pressed="false">Active</button>      
+                    <button class="filter btn btn-outline-primary" 
+                            data-filter="completed" 
+                            aria-label="Show completed tasks"
+                            aria-pressed="false">Completed</button>
                 </div>
 
                 <!-- Todo List -->
                 <ul id="todo-list" class="list-group list-group-flush mb-4"></ul>
 
                 <!-- Footer -->
-                <div class="d-flex justify-content-between align-items-center">
-                    <span id="item-count" class="text-muted small">0 items</span>
-                    <button id="clear-completed" class="btn btn-sm btn-outline-danger">Clear Completed</button>
-                </div>
+               <shared-component></shared-component>
             </div>
         </div>
     </div>
 
-    <!-- Bootstrap JS Bundle -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
     <script src="script.js" type="module"></script>
+    <script src="web-component.js" defer></script>
 </body>
-
 </html>
+
